--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
   <title>Kebijakan Privasi</title>
 </head>
 <body>
-  <h1>Kebijakan Privasi – Jalatrang Mobile Dashboard</h1>
+  <h1>Kebijakan Privasi – Jalatrang </h1>
   <p>Aplikasi ini dikembangkan oleh Jalatrang dan menggunakan teknologi WebView untuk menampilkan konten dari <a href="https://jalatrang.id/dashboard">jalatrang.id/dashboard</a>.</p>
 
   <h2>Data yang Kami Kumpulkan</h2>
@@ -23,6 +23,6 @@
   <p>Anda dapat menolak izin akses melalui pengaturan perangkat. Namun, beberapa fitur mungkin tidak dapat digunakan secara maksimal.</p>
 
   <h2>Kontak</h2>
-  <p>Jika Anda memiliki pertanyaan, silakan hubungi kami di: <a href="mailto:testimodz@gmail.com"testimodz@gmail.com</a>.</p>
+  <p>Jika Anda memiliki pertanyaan, silakan hubungi kami di: <a href="mailto:testimodz@gmail.com">testimodz@gmail.com</a>.</p>
 </body>
 </html>
